appId: com.eversync.zllo
---
- runFlow: _helpers/open-dev-app.yaml
- tapOn: 'Já tenho conta'
- extendedWaitUntil:
    visible: 'Entrar'
    timeout: 10000
- tapOn:
    id: login-email
- inputText: assistencia@zllo.dev
- tapOn:
    id: login-password
- inputText: senha123
- hideKeyboard
- tapOn: 'Entrar'
- extendedWaitUntil:
    visible: 'Orçamentos'
    timeout: 30000
