appId: com.eversync.zllo
---
- runFlow: _helpers/open-dev-app.yaml
- tapOn: 'Já tenho conta'
- extendedWaitUntil:
    visible: 'Entrar'
    timeout: 10000
- tapOn: 'Esqueci minha senha'
- assertVisible: 'Recuperar senha'
- back
- tapOn: 'Criar agora'
- assertVisible: 'Criar conta'
